fixed infinit loop when viewing courses without any lessons, fixed modals on IE11

--- a/src/less/basics.less
+++ b/src/less/basics.less
@@ -233,7 +233,7 @@ body {
     overflow-y: auto;
     height: calc(100vh - @headerHeight - 60px);
     .form-buttons{
-      position: fixed;
+      position: absolute;
       bottom: 0;
       padding-bottom: 10px;
       padding-top: 10px;
